--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <vaadin.version>8.13.0</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
     </properties>
+	<properties>
+        <jacoco.version>0.8.6</jacoco.version>                               
+<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>      
+<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>         
+<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath> 
+<sonar.language>java</sonar.langauage>  
+    </properties>
 
     <repositories>
         <repository>
@@ -55,6 +62,12 @@
 
 
     <dependencies>
+	    <dependency>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.13</version>
+</dependency>
+
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-compatibility-server</artifactId>
@@ -159,6 +172,26 @@
 
     <build>
         <plugins>
+		<plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>${jacoco.version}</version>
+      <executions>
+        <execution>
+          <id>prepare-agent</id>
+          <goals>
+            <goal>prepare-agent</goal>
+          </goals>
+        </execution>
+        <execution>
+          <id>report</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>report</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin> 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
