--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,22 @@
     <packaging>war</packaging>
     <version>2.0</version>
     <name>Vaadin Addressbook example</name>
-
+<property>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <vaadin.version>8.13.0</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
     </properties>
+	
 	<properties>
         <jacoco.version>0.8.6</jacoco.version>                               
-<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>      
-<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>         
-<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath> 
-<sonar.language>java</sonar.langauage>  
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>      
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>         
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath> 
+        <sonar.language>java</sonar.langauage>  
     </properties>
-
+</property>
     <repositories>
         <repository>
             <id>vaadin-prereleases</id>
